tests/ui/internal_world_query_plan.stderr
error[E0603]: module `query` is private
 --> tests/ui/internal_world_query_plan.rs:1:20
  |
1 | use moirai::world::query::spec;
  |                    ^^^^^  ---- module `spec` is not publicly re-exported
  |                    |
  |                    private module
  |
note: the module `query` is defined here
 --> src/world/mod.rs
  |
  | pub(crate) mod query;
  | ^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/internal_world_query_plan.rs:1:32
  |
1 | use moirai::world::query::spec;
  |                                ^ consider adding a `main` function to `$DIR/tests/ui/internal_world_query_plan.rs`
